--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon server.js",
     "serve": "node server.js",
-    "start": "node your-server-file.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
